fix: scroll layout shift and onne full href

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@ html {
   --scroll-behavior: smooth !important;
   scroll-behavior: smooth !important;
   scroll-snap-type: y mandatory;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 hr {
@@ -19,10 +19,6 @@ hr {
 
 main {
   @apply transition-[opacity,transform,filter] duration-500 ease-in-out;
-}
-
-#body {
-  --removed-body-scroll-bar-size: 10px !important;
 }
 
 body {
